--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  overflow: hidden;
   z-index: 81;
 }
 
@@ -123,6 +122,7 @@ h1{
   background-color: #2d2d2d;
     -webkit-background-clip: text;
     -moz-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     color: rgba(0, 0, 0, 0.6);
     text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
@@ -169,10 +169,12 @@ h2 {
   background: #444;
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
+      -webkit-flexdirection: column;
           flex-direction: column;
   height: auto; width: 100%;
   max-width: 100%;
@@ -295,7 +297,11 @@ h2 {
 
 /*Header Styling
 ==============================================*/
-
+.header-overflow {
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+}
 .city-background {
   position: absolute;
   top: 0;
@@ -308,7 +314,10 @@ h2 {
   width: 2000px;
   padding-right: 50%;
   z-index: 82;
-  animation: drop 50s infinite alternate ease-in-out;
+  -webkit-animation: scroll 50s infinite alternate ease-in-out;
+    -moz-animation: scroll 50s infinite alternate ease-in-out;
+    -o-animation: scroll 50s infinite alternate ease-in-out;
+    animation: scroll 50s infinite alternate ease-in-out;
 }
 
 .logo-container {
@@ -317,16 +326,16 @@ h2 {
 .logo-background {
   background:  rgb(34,34,34); /* for IE */
   background:  rgba(34,34,34,0.55);
-  background-size: cover;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  display: none;
   position: absolute;
   top: 20px; right: 0; bottom: 0; left: 0;
   z-index: 98;
   -webkit-filter: blur(5px);
-    filter: url('/media/blur.svg#blur');
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
     filter: blur(5px);
-
 }
 a.logo,
 .logo-background {
@@ -334,12 +343,10 @@ a.logo,
   padding-top: 20px;
   padding-bottom: 20px;
   max-width: 350px;
-  width: 80%;
   text-align: center;
  }
 .logo img {
   position: relative;
-  width: 100%;
   z-index: 99;
   
 }
@@ -372,8 +379,10 @@ a.logo,
   height: 100%;
   background: url('../img/pattern2.png') repeat top left;
   opacity: .4;
-  animation: pulse 2s infinite alternate;
-    -webkit-animation: pulse 2s infinite alternate;
+  -webkit-animation: pulse 2s infinite alternate;
+    -moz-animation: pulse 2s infinite alternate;
+    -o-animation: pulse 2s infinite alternate;
+    animation: pulse 2s infinite alternate;
   z-index: 80;  
 }
 .img-shadow {
@@ -388,12 +397,14 @@ a.logo,
 }
 .background,
 .about-background {
-  background: url('../img/Attachment-1.jpeg')no-repeat;
+  background: url('../img/selfie.jpeg')no-repeat;
   background-size: cover;
   width: 100%;
   background-position: right;
   -webkit-animation: shift 1s 3 alternate-reverse;
-    animation: shift 1s 3 alternate-reversein;  
+    -moz-animation: shift 1s 3 alternate-reverse;
+    -o-animation: shift 1s 3 alternate-reverse;
+    animation: shift 1s 3 alternate-reverse;  
 }
 .background {
   z-index: 2;
@@ -406,7 +417,9 @@ a.logo,
   left: 0;
   z-index: 97;
   -webkit-filter: blur(10px);
-    filter: url('/media/blur.svg#blur');
+    -moz-filter: blur(10px);
+    -ms-filter: blur(10px);
+    -o-filter: blur(10px);
     filter: blur(10px);  
   
 }
@@ -423,7 +436,10 @@ a.logo,
   background:  rgb(34,34,34); /* for IE */
   background: rgba(34,34,34,0.75);
   z-index: 98;
-  animation: opaque 5s ease;
+  -webkit-animation: opaque 5s ease;
+    -moz-animation: opaque 5s ease;
+    -o-animation: opaque 5s ease;
+    animation: opaque 5s ease;
   
 }
 
@@ -650,13 +666,69 @@ iframe {
 /***********************************************
             Animations
 ***********************************************/
-
-@keyframes drop {
+@-webkit-keyframes scroll {
   0% {
     transform: translateX(-40%);
   }
   100% {
     transform: translateX(0%);
+  }
+}
+@-moz-keyframes scroll {
+  0% {
+    transform: translateX(-40%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+@-o-keyframes scroll {
+  0% {
+    transform: translateX(-40%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(-40%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+@-webkit-keyframes opaque {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: .1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes opaque {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: .1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-o-keyframes opaque {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: .1;
+  }
+  100% {
+    opacity: 1;
   }
 }
 @keyframes opaque {
@@ -671,6 +743,58 @@ iframe {
   }
 }
 @-webkit-keyframes shift {
+  0% {
+    background: url('../img/distortion.jpg')no-repeat 50%;
+    background-size: cover;
+  }
+  10% {
+    background: url('../img/selfie.jpeg')no-repeat 50%;
+    background-size: cover;
+  }
+  20% { left: 5px; }
+  25% { left: 0; }
+  30% {
+    left: 5px;
+    background: url('../img/distortion.jpg')no-repeat 50%;
+    background-size: cover;
+  }
+  35% { left: 0; }
+  40% {
+    background: url('../img/selfie.jpeg')no-repeat 50%;
+    background-size: cover;
+  }
+  45% {left: 5px;}
+  50% {left: 0;}
+  100% {
+  }
+}
+@-moz-keyframes shift {
+  0% {
+    background: url('../img/distort.jpg')no-repeat 50%;
+    background-size: cover;
+  }
+  10% {
+    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
+    background-size: cover;
+  }
+  20% { left: 5px; }
+  25% { left: 0; }
+  30% {
+    left: 5px;
+    background: url('../img/distort.jpg')no-repeat 50%;
+    background-size: cover;
+  }
+  35% { left: 0; }
+  40% {
+    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
+    background-size: cover;
+  }
+  45% {left: 5px;}
+  50% {left: 0;}
+  100% {
+  }
+}
+@-o-keyframes shift {
   0% {
     background: url('../img/distort.jpg')no-repeat 50%;
     background-size: cover;
@@ -747,6 +871,9 @@ iframe {
 }
 @media screen and ( min-width: 768px ) {
 
+  .logo-background {
+    display: inline-block;
+  }
  .intro {
     width: 40%;
     margin-left: 60%;
