--- a/css/style.css
+++ b/css/style.css
@@ -405,7 +405,7 @@ a.logo,
   -webkit-animation: shift 1s 3 alternate-reverse;
     -moz-animation: shift 1s 3 alternate-reverse;
     -o-animation: shift 1s 3 alternate-reverse;
-    animation: shift 1s 3 alternate-reverse;  
+    animation: shift 1s ease-in;  
 }
 .background {
   z-index: 2;
@@ -564,9 +564,12 @@ a.logo,
 .selector-circle:hover,
 .active {
   transform: translateY(-38%);
-  -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
-          box-shadow: -5px 13.5px 8px -4px rgba(0,0,0,.2),  .5px 9px 0 rgba(102,102,102,1),   inset 0 -5px 0 rgba(0,0,0,0.3), 
-          inset 0 2px 5px rgba(255,255,255,0.4), 0.5px 12px 5px rgba(0,0,0,1);
+  -webkit-box-shadow: -5px 13.5px 8px -4px rgba(0,0,0,.2),  .5px 9px 0 rgba(102,102,102,1),   
+                      inset 0 -5px 0 rgba(0,0,0,0.3), 
+                      inset 0 2px 5px rgba(255,255,255,0.4), 0.5px 12px 5px rgba(0,0,0,1);
+          box-shadow: -5px 13.5px 8px -4px rgba(0,0,0,.2),  .5px 9px 0 rgba(102,102,102,1),   
+                      inset 0 -5px 0 rgba(0,0,0,0.3), 
+                        inset 0 2px 5px rgba(255,255,255,0.4), 0.5px 12px 5px rgba(0,0,0,1);
           
 }
 
@@ -613,8 +616,9 @@ iframe {
   transition: all 0.55s;
 }
 .modal-wrap {
+  display: block;
   position: relative;
-  width: 90%;
+  width: 100%;
   max-width: 500px;
   margin: 0 auto;
 }
@@ -634,7 +638,6 @@ iframe {
 .modal-overlay {
   background: dimgray;
   position: fixed;
-  top: 0px; left: 0px; right: 0px; bottom: 0px;
   opacity: 0;
   z-index: -100;
   -webkit-transform: scale(.1);
@@ -668,12 +671,59 @@ iframe {
 }
 
 .modal-active {
+  top: 0px; left: 0px; right: 0px; bottom: 0px;
   opacity: 1;
   -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -o-transform: scale(1);
     transform: scale(1); 
   z-index: 84;
+}
+
+/***********************************************
+            Form Section
+***********************************************/
+
+.contact-form {
+  display: block;
+  margin: 0 auto; padding: 0 5%;
+}
+.contact-form input[type="text"],
+.message {
+  color: whitesmoke;
+  background: #666;
+  font-family: 'orbitron', sans-serif;
+  padding: 1% 2%;
+  -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
+          box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
+}
+.contact-form input[type="text"] {
+  float: left;
+  width: 42%;
+  margin-bottom: 8px; 
+}
+.gutter {
+  margin: 0 5%;
+}
+.message {
+  border: none;
+  height: 200px; width: 89%;
+}
+input::placeholder,
+textarea::placeholder {
+  color: #292b2c;
+  font-family: 'orbitron', sans-serif;
+}
+.submit-button {
+  background: #666;
+  font-family: 'orbitron', sans-serif;
+  padding: 3% 2%;
+}
+input {
+  border: none;
+  -webkit-box-shadow: 1px 1px 0px black, inset 0 2px 0px rgba(255,255,255,0.4);
+          box-shadow: 1px 1px 0px black, inset 0 2px 0px rgba(255,255,255,0.4);
+  
 }
 
 /***********************************************
@@ -836,99 +886,87 @@ iframe {
     background: url('../img/selfie.jpeg')no-repeat 50%;
     background-size: cover;
   }
-  20% { left: 5px; }
-  25% { left: 0; }
+  
   30% {
-    left: 5px;
+    
     background: url('../img/distortion.jpg')no-repeat 50%;
     background-size: cover;
   }
-  35% { left: 0; }
+  
   40% {
     background: url('../img/selfie.jpeg')no-repeat 50%;
     background-size: cover;
   }
-  45% {left: 5px;}
-  50% {left: 0;}
-  100% {
+    100% {
   }
 }
 @-moz-keyframes shift {
   0% {
-    background: url('../img/distort.jpg')no-repeat 50%;
+    background: url('../img/distortion.jpg')no-repeat 50%;
     background-size: cover;
   }
   10% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
+    background: url('../img/selfie.jpeg')no-repeat 50%;
     background-size: cover;
   }
-  20% { left: 5px; }
-  25% { left: 0; }
+  
   30% {
-    left: 5px;
-    background: url('../img/distort.jpg')no-repeat 50%;
+    
+    background: url('../img/distortion.jpg')no-repeat 50%;
     background-size: cover;
   }
-  35% { left: 0; }
+  
   40% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
+    background: url('../img/selfie.jpeg')no-repeat 50%;
     background-size: cover;
   }
-  45% {left: 5px;}
-  50% {left: 0;}
-  100% {
+    100% {
   }
 }
 @-o-keyframes shift {
   0% {
-    background: url('../img/distort.jpg')no-repeat 50%;
+    background: url('../img/distortion.jpg')no-repeat 50%;
     background-size: cover;
   }
   10% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
+    background: url('../img/selfie.jpeg')no-repeat 50%;
     background-size: cover;
   }
-  20% { left: 5px; }
-  25% { left: 0; }
+  
   30% {
-    left: 5px;
-    background: url('../img/distort.jpg')no-repeat 50%;
+    
+    background: url('../img/distortion.jpg')no-repeat 50%;
     background-size: cover;
   }
-  35% { left: 0; }
+  
   40% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
+    background: url('../img/selfie.jpeg')no-repeat 50%;
     background-size: cover;
   }
-  45% {left: 5px;}
-  50% {left: 0;}
-  100% {
+    100% {
   }
 }
 @keyframes shift {
   0% {
-    background: url('../img/distort.jpg')no-repeat 50%;
+    background: url('../img/distortion.jpg')no-repeat 50%;
     background-size: cover;
   }
   10% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
+    background: url('../img/selfie.jpeg')no-repeat 50%;
     background-size: cover;
   }
-  20% { left: 5px; }
-  25% { left: 0; }
+  
   30% {
-    left: 5px;
-    background: url('../img/distort.jpg')no-repeat 50%;
+    
+    background: url('../img/distortion.jpg')no-repeat 50%;
     background-size: cover;
   }
-  35% { left: 0; }
+  
   40% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
+    background: url('../img/selfie.jpeg')no-repeat 50%;
     background-size: cover;
   }
-  45% {left: 5px;}
-  50% {left: 0;}
-  100% {
+    100% {
   }
 }
 
