--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ h1{
     -webkit-transform: translateX(-100%) scale(0.25);
     -webkit-transition: all .5s;
   transition: all .5s;
+  padding-top: 3.5rem;
 }
 .headline-show{
   -webkit-transform: translateX(0%) scale(1);
@@ -174,20 +175,21 @@ h2 {
       -webkit-flexdirection: column;
           flex-direction: column;
   height: auto; width: 100%;
-  max-width: 100%;
+  
   font-size: 1.8em;
   font-family: 'hacked', sans-serif;
   line-height: 1.6;
   position: relative;
   -webkit-transition: all .5s ease;
   transition: all .5s ease;
-  visibility: visible;
-  z-index: 80;
-}
-.menu-hide{
+  visibility: hidden;
   max-width: 0;
   overflow: hidden;
-  visibility: hidden;
+  z-index: 80;
+}
+.menu-show {
+  max-width: 100%;
+  visibility: visible;
 }
 .nav_menu {
   display: inline-block;
@@ -311,7 +313,7 @@ h2 {
   background: url('../img/city.png');
   background-position: center;
   background-size: 40%;
-  width: 2000px;
+  width: 2000px; 
   padding-right: 50%;
   z-index: 82;
   -webkit-animation: scroll 50s infinite alternate ease-in-out;
@@ -353,6 +355,7 @@ a.logo,
 }
 .mobile-header {
   background-color: rgba(34,34,34,0.55);
+  z-index: 82;
 }
 .mobile-logo {
   position: relative;
@@ -366,7 +369,7 @@ a.logo,
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  z-index: 77;
+  z-index: 83;
 
 }
 
@@ -611,7 +614,7 @@ iframe {
   font-family: 'hacked', sans-serif;
   font-size: 1.5rem;
   margin: 0 auto;
-  width: 80%;
+  width: 100%;
   text-align: center;
   transition: all 0.55s;
 }
@@ -639,6 +642,7 @@ iframe {
   background: dimgray;
   position: fixed;
   opacity: 0;
+  bottom: -1000px;
   z-index: -100;
   -webkit-transform: scale(.1);
     -moz-transform: scale(.1);
@@ -647,7 +651,7 @@ iframe {
   -webkit-transition: all .75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     -moz-transition: all .75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     -o-transition: all .75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    transition: all .75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition: all .75s ease-in-out;
 }
 .contact {
   position: relative;
@@ -655,9 +659,9 @@ iframe {
   -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
           box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
   display: block;
-  margin: 20px 20%;
-  padding: 0.75em 1.5em;
-  width: auto;
+  margin: 2rem auto;
+  padding: 0.75rem 1rem;
+  width: 50%;
   z-index: 79;
   
 }
@@ -693,7 +697,7 @@ iframe {
   color: whitesmoke;
   background: #666;
   font-family: 'orbitron', sans-serif;
-  padding: 1% 2%;
+  padding: 2% 2%;
   -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
           box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
 }
@@ -708,11 +712,16 @@ iframe {
 .message {
   border: none;
   height: 200px; width: 89%;
+  margin-bottom: 1rem;
 }
 input::placeholder,
 textarea::placeholder {
   color: #292b2c;
   font-family: 'orbitron', sans-serif;
+}
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  opacity: 1;
 }
 .submit-button {
   background: #666;
@@ -723,7 +732,6 @@ input {
   border: none;
   -webkit-box-shadow: 1px 1px 0px black, inset 0 2px 0px rgba(255,255,255,0.4);
           box-shadow: 1px 1px 0px black, inset 0 2px 0px rgba(255,255,255,0.4);
-  
 }
 
 /***********************************************
@@ -827,7 +835,7 @@ input {
 }
 @keyframes scroll {
   0% {
-    transform: translateX(-40%);
+    transform: translateX(-10%);
   }
   100% {
     transform: translateX(0%);
@@ -997,6 +1005,9 @@ input {
   .logo-background {
     display: inline-block;
   }
+  .mobile-city{
+    visibility: hidden;
+  }
  .intro {
     width: 40%;
     margin-left: 60%;
@@ -1006,12 +1017,6 @@ input {
   }
   .nav_menu {
     display: none;
-  }
-  .menu {
-
-    padding: 0;
-    width: 100%;
-    height: auto;
   }
   .menu {
     display: -webkit-box;
@@ -1029,6 +1034,7 @@ input {
     border-radius: 6px;
     -webkit-box-shadow: inset 0 1px 1px #777;
             box-shadow: inset 0 1px 1px #777;
+    visibility: visible;        
   }
   .navItem {
     border-right: 1px solid #222;
@@ -1069,15 +1075,18 @@ input {
     max-width: 150px;
   }
   
+  .site-one-photo,
+  .site-two-photo {
+    float: left;
+    width: 30%;
+    margin: 2% 2%;
+    padding-bottom: 20%;
+}
   .site-one-photo {
     float: left;
-    padding-bottom: 0;
-    height: 200px; width: 30%;
-}
+  }
   .site-two-photo {
     float: right;
-    height: 200px; width: 30%;
-    padding-bottom: 0;
 }
   .music-info  {
     font-size: 1.3rem;
@@ -1119,6 +1128,12 @@ input {
 	     -ms-flex-order: 3;
 	         order: 3;
 }
+  .contact {
+    width: 30%;
+  }
+  .modal-active {
+  top: 10%; left: 10%; right: 10%; bottom: 0px;
+}  
   .social {
     width: 50%;
   }
