changed case of hacked font

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ FONTS
 }
 @font-face {
   font-weight: normal; font-style: normal;  font-family: 'hacked'; src:
-    url('hacked/hacked.eot?#iefix') format('embedded-opentype'), url('hacked/hacked.woff') format('woff'), url('hacked/hacked.ttf') format('truetype'), url('hacked/hacked.svg#hacked') format('svg'); }
+    url('HACKED/HACKED.eot?#iefix') format('embedded-opentype'), url('HACKED/HACKED.woff') format('woff'), url('HACKED/HACKED.ttf') format('truetype'), url('HACKED/HACKED.svg#hacked') format('svg'); }
 
 /*******************************************************
 MAIN ELEMENT STYLES
