--- a/css/style.css
+++ b/css/style.css
@@ -107,27 +107,34 @@ footer {
   text-align: center;
   font-family: 'hacked', sans-serif;
 }
-h1{
+h1, h3{
 
   font-family: 'hacked', sans-serif;
 	text-align: center;
-  color: #999;
+  color: #999
 }
 .headline {
-  font-size: 3rem;
-  margin: 1% 2% 2% 2%;
-  background-color: #2d2d2d;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    color: rgba(0, 0, 0, 0.6);
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
+  background: linear-gradient( to right, rgba(10,6,6,.4) 100%, transparent), url("../img/wall.jpg");
+  background-size: cover;
+  margin: 1% 2% 2% 0;
   transform: translateX(-100%) scale(0.25);
     -webkit-transform: translateX(-100%) scale(0.25);
     -webkit-transition: all .5s;
   transition: all .5s;
-  padding-top: 3.5rem;
+  width: 80%;
+  position: relative;
+  z-index: 79;
+}
+.headline-text {
+  color: black;
+  font-size: 3rem;
+  /* background-color: #2d2d2d;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  color: rgba(0, 0, 0, 0.6);
+  text-shadow: 2px 2px 3px rgba(255,255,255,0.1); */
 }
 .headline-show{
   -webkit-transform: translateX(0%) scale(1);
@@ -321,12 +328,20 @@ h2 {
     -o-animation: scroll 50s infinite alternate ease-in-out;
     animation: scroll 50s infinite alternate ease-in-out;
 }
-
+.logo-text {
+  position: absolute;
+  top: 7.4rem; left: 0px;
+}
+.logo-text h1 {
+  font-size: 5rem;
+  line-height: .7;
+  margin: 0;
+}
 .logo-container {
   position: relative;
 }
 .logo-background {
-  background:  rgb(34,34,34); /* for IE */
+  background:  rgb(34,34,34); 
   background:  rgba(34,34,34,0.55);
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
@@ -339,6 +354,10 @@ h2 {
     -o-filter: blur(5px);
     filter: blur(5px);
 }
+.logo {
+  position: relative;
+  z-index: 99;
+}
 a.logo,
 .logo-background {
   margin: 0 auto;
@@ -347,9 +366,8 @@ a.logo,
   max-width: 350px;
   text-align: center;
  }
-.logo img {
+ .logo img {
   width: 100%;
-  position: relative;
   z-index: 99;
   
 }
