--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,15 @@ FONTS
          url('destroy/destroy_-webfont.svg#destroyregular') format('svg');
 }
 @font-face {
-  font-weight: normal; font-style: normal;  font-family: 'hacked'; src:
-    url('HACKED/HACKED.eot?#iefix') format('embedded-opentype'), url('HACKED/HACKED.woff') format('woff'), url('HACKED/HACKED.ttf') format('truetype'), url('HACKED/HACKED.svg#hacked') format('svg'); }
+  font-weight: normal; 
+  font-style: normal;  
+  font-family: 'hacked'; 
+  src:
+    url('HACKED/HACKED.eot?#iefix') format('embedded-opentype'), 
+    url('HACKED/HACKED.woff') format('woff'), 
+    url('HACKED/HACKED.ttf') format('truetype'), 
+    url('HACKED/HACKED.svg#hacked') format('svg'); 
+}
 
 /*******************************************************
 MAIN ELEMENT STYLES
@@ -90,11 +97,12 @@ p {
   height: auto;
   margin-bottom: 10%;
   width: 100%;
-  z-index: 79;
   position: relative;
+  z-index: 79;
+
 }
 .fade-container {
-	opacity: 0;
+	opacity: 1;
   -webkit-transition: all .5s;
   transition: all .5s;
 }
@@ -102,10 +110,12 @@ p {
 	opacity: 1;
 }
 footer {
+  position: relative;
   margin: 0 auto;
 	width: 100%;
   text-align: center;
   font-family: 'hacked', sans-serif;
+  z-index: 83;
 }
 h1, h3{
 
@@ -113,32 +123,36 @@ h1, h3{
 	text-align: center;
   color: #999
 }
+.top-shadow {
+  box-shadow: 0 -10px 10px -10px black;
+}
 .headline {
-  background: linear-gradient( to right, rgba(10,6,6,.4) 100%, transparent), url("../img/wall.jpg");
-  background-size: cover;
-  margin: 1% 2% 2% 0;
-  transform: translateX(-100%) scale(0.25);
-    -webkit-transform: translateX(-100%) scale(0.25);
+  background: #5e5e5e;
+  box-shadow: inset 0 -5px 19px -9px rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+  transform: translateY(90%);
+    /* -webkit-transform: translateX(-100%) scale(0.25); */
     -webkit-transition: all .5s;
-  transition: all .5s;
+  transition: all .9s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   width: 80%;
+  opacity: 0;
   position: relative;
-  z-index: 79;
+  z-index: 78;
 }
 .headline-text {
-  color: black;
-  font-size: 3rem;
-  /* background-color: #2d2d2d;
+  background-color: azure;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
-    -webkit-text-fill-color: transparent;
-  color: rgba(0, 0, 0, 0.6);
-  text-shadow: 2px 2px 3px rgba(255,255,255,0.1); */
+    color: dimgray;
+  font-size: 2.1rem;
+  margin: 0;
+  padding: .5rem;
+  text-shadow: 0 0 8px rgba(255,255,255, .5), rgba(255,255,255,.7) 0px 3px 3px; 
 }
 .headline-show{
-  -webkit-transform: translateX(0%) scale(1);
-  transform: translateX(0%) scale(1);
+  opacity: 1;
+  transform: translateY(0%);
 
 }
 .border {
@@ -174,7 +188,6 @@ h2 {
   background: #444;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -200,16 +213,13 @@ h2 {
 }
 .nav_menu {
   display: inline-block;
+  margin: 3px 0 0 3px;
   position: relative;
   z-index: 99;
-  height: 50px; width: 10%; 
+  height: 50px; width: 15%; 
   -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
     transform: rotate(0deg);
   -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
   cursor: pointer;
   
@@ -223,12 +233,8 @@ h2 {
   opacity: 1;
   left: 25%;
   -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
     transform: rotate(0deg);
   -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
 }
 .nav_menu span:nth-child(1) {
@@ -248,14 +254,10 @@ h2 {
 }
 .nav_menu.open span:nth-child(2) {
   -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
     transform: rotate(45deg);
 }
 .nav_menu.open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
 }
 .nav_menu.open span:nth-child(4) {
@@ -264,8 +266,7 @@ h2 {
   left: 50%;
 }
 .navItem, .navLogo {
-  -webkit-box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
-          box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
+  box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
   color: #999;
   padding: 2px;
   text-align: center;
@@ -273,12 +274,15 @@ h2 {
 }
 
 .navItem:hover {
-  color: azure;
   -webkit-transition: 700ms;
   transition: 700ms;
-  -webkit-box-shadow: inset 1px 3px 1px black, inset -1px 0 1px black;
-          box-shadow: inset 1px 3px 1px black, inset -1px 0 1px black;
-  text-shadow: 0 0 20px white;
+  box-shadow: inset 1px 3px 1px black, inset -1px 0 1px black;
+  background-color: azure;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: #424242;
+  text-shadow: 0 0 10px white, rgba(255,255,255,0.5) 0px 3px 3px; 
 }
 .navLogo {
 	display: none;
@@ -288,16 +292,14 @@ h2 {
   background: rgba(10,6,6,.7);
   color: #999;
   position: fixed;
-  -o-border-image: url(../img/menu-border.svg) 45 0 0 0;
-     border-image: url(../img/menu-border.svg) 45 0 0 0;
+  border-image: url(../img/menu-border.svg) 45 0 0 0;
   border-top: 10px solid transparent;
   border-image-repeat: stretch;
   bottom: 0;
 }
 .sticky-nav-button {
   background: rgba(10,6,6,.7);
-  -webkit-box-shadow: 1px 1px 1px 3px #999;
-          box-shadow: 1px 1px 1px 3px #999;
+  box-shadow: 1px 1px 1px 3px #999;
   position: fixed;
   top: 0;
   width: 20%;
@@ -324,8 +326,6 @@ h2 {
   padding-right: 50%;
   z-index: 82;
   -webkit-animation: scroll 50s infinite alternate ease-in-out;
-    -moz-animation: scroll 50s infinite alternate ease-in-out;
-    -o-animation: scroll 50s infinite alternate ease-in-out;
     animation: scroll 50s infinite alternate ease-in-out;
 }
 .logo-text {
@@ -372,14 +372,15 @@ a.logo,
   
 }
 .mobile-header {
-  background-color: rgba(34,34,34,0.55);
+   background-color: rgba(34,34,34,0.55); 
   z-index: 82;
 }
 .mobile-logo {
+  margin: 3px 0 0 3px;
   position: relative;
   color: #999;
-  width: 90%; height: 50px;
-  padding-top: .5rem;
+  width: 80%; height: auto;
+    padding-top: .5rem;  
   float: right;
   font-size: 1rem;
   font-family: 'destroyregular';
@@ -400,16 +401,13 @@ a.logo,
   width: 100%;
   height: 100%;
   background: url('../img/pattern2.png') repeat top left;
-  opacity: .4;
-  -webkit-animation: pulse 2s infinite alternate;
-    -moz-animation: pulse 2s infinite alternate;
-    -o-animation: pulse 2s infinite alternate;
-    animation: pulse 2s infinite alternate;
+  opacity: .7;
+  /* -webkit-animation: pulse 2s infinite alternate;
+    animation: pulse 2s infinite alternate; */
   z-index: 75;  
 }
 .img-shadow {
-  -webkit-box-shadow: 1px 1px 5px 1px black;
-          box-shadow: 1px 1px 5px 1px black;
+  box-shadow: 1px 1px 5px 1px black;
 }
 
 /*About section
@@ -424,8 +422,6 @@ a.logo,
   width: 100%;
   background-position: right;
   -webkit-animation: shift 1s 3 alternate-reverse;
-    -moz-animation: shift 1s 3 alternate-reverse;
-    -o-animation: shift 1s 3 alternate-reverse;
     animation: shift 1s ease-in;  
 }
 .background {
@@ -459,8 +455,6 @@ a.logo,
   background: rgba(34,34,34,0.75);
   z-index: 98;
   -webkit-animation: opaque 5s ease;
-    -moz-animation: opaque 5s ease;
-    -o-animation: opaque 5s ease;
     animation: opaque 5s ease;
   
 }
@@ -570,8 +564,7 @@ a.logo,
 }
 .selector-circle {
   background: #666;
-  -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
-          box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
   cursor: pointer; 
   display: inline-block;
   position: relative;
@@ -579,16 +572,15 @@ a.logo,
   width: 25px; height: 25px;
   padding: .5rem;
   margin: .9rem;
+  -webkit-transition: all 5000 ease;
   transition: all 5000 ease;
 
 }
 .selector-circle:hover,
 .active {
-  transform: translateY(-38%);
-  -webkit-box-shadow: -5px 13.5px 8px -4px rgba(0,0,0,.2),  .5px 9px 0 rgba(102,102,102,1),   
-                      inset 0 -5px 0 rgba(0,0,0,0.3), 
-                      inset 0 2px 5px rgba(255,255,255,0.4), 0.5px 12px 5px rgba(0,0,0,1);
-          box-shadow: -5px 13.5px 8px -4px rgba(0,0,0,.2),  .5px 9px 0 rgba(102,102,102,1),   
+  -webkit-transform: translateY(-38%);
+          transform: translateY(-38%);
+  box-shadow: -5px 13.5px 8px -4px rgba(0,0,0,.2),  .5px 9px 0 rgba(102,102,102,1),   
                       inset 0 -5px 0 rgba(0,0,0,0.3), 
                         inset 0 2px 5px rgba(255,255,255,0.4), 0.5px 12px 5px rgba(0,0,0,1);
           
@@ -598,6 +590,9 @@ a.logo,
 /***********************************************
             Music Page
 ***********************************************/
+.music-content {
+  margin-bottom: 10%;
+}
 .music-info {
   font-family: 'Homenaje', sans-serif;
   font-size: 1.3rem;
@@ -612,8 +607,7 @@ a.logo,
 }
 iframe {
   margin: 10px auto;
-  -webkit-box-shadow: 2px 2px 0 black;
-          box-shadow: 2px 2px 0 black;
+  box-shadow: 2px 2px 0 black;
 }
 
 /***********************************************
@@ -634,6 +628,7 @@ iframe {
   margin: 0 auto;
   width: 100%;
   text-align: center;
+  -webkit-transition: all 0.55s;
   transition: all 0.55s;
 }
 .modal-wrap {
@@ -663,19 +658,15 @@ iframe {
   bottom: -1000px;
   z-index: -100;
   -webkit-transform: scale(.1);
-    -moz-transform: scale(.1);
-    -o-transform: scale(.1);
     transform: scale(.1);
   -webkit-transition: all .75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    -moz-transition: all .75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    -o-transition: all .75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -webkit-transition: all .75s ease-in-out;
     transition: all .75s ease-in-out;
 }
 .contact {
   position: relative;
   background: #666;
-  -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
-          box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
   display: block;
   margin: 2rem auto;
   padding: 0.75rem 1rem;
@@ -687,8 +678,6 @@ iframe {
   width: 4em;
   color: transparent;
   -webkit-transition: color 0.2s 0s, background-color 0.3s ease-in-out, width 0.3s 0.2s;
-    -moz-transition: color 0.2s 0s, background-color 0.3s ease-in-out, width 0.3s 0.2s;
-    -o-transition: color 0.2s 0s, background-color 0.3s ease-in-out, width 0.3s 0.2s;
     transition: color 0.2s 0s, background-color 0.3s ease-in-out, width 0.3s 0.2s;
 }
 
@@ -696,8 +685,6 @@ iframe {
   top: 0px; left: 0px; right: 0px; bottom: 0px;
   opacity: 1;
   -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -o-transform: scale(1);
     transform: scale(1); 
   z-index: 84;
 }
@@ -707,14 +694,26 @@ iframe {
 ***********************************************/
 
 label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-family: 'orbitron', sans-serif;
 }
 .form-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-bottom: 10px;    
 }
 .label-text {
   display: block;
@@ -730,15 +729,14 @@ label {
 }
 .contact-form input[type="text"],
 .message {
+  font-family: sans-serif;
   color: whitesmoke;
   background: #666;
-  font-family: 'orbitron', sans-serif;
   padding: 2% 2%;
-  -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
-          box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
 }
 .contact-form input[type="text"] {
-
+  font-family: 'orbitron', sans-serif;
   float: left;
   width: 90%;
   margin-bottom: 8px; 
@@ -748,6 +746,27 @@ label {
   border: none;
   height: 200px; width: 93%;
   margin: 0 0 1rem 2%;
+}
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #292b2c;
+  font-family: sans-serif;
+  padding-left: .3rem;
+  opacity: .8;
+}
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #292b2c;
+  font-family: sans-serif;
+  padding-left: .3rem;
+  opacity: .8;
+}
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #292b2c;
+  font-family: sans-serif;
+  padding-left: .3rem;
+  opacity: .8;
 }
 input::placeholder,
 textarea::placeholder {
@@ -767,10 +786,20 @@ textarea::-moz-placeholder {
 }
 input {
   border: none;
-  -webkit-box-shadow: 1px 1px 0px black, inset 0 2px 0px rgba(255,255,255,0.4);
-          box-shadow: 1px 1px 0px black, inset 0 2px 0px rgba(255,255,255,0.4);
+  box-shadow: 1px 1px 0px black, inset 0 2px 0px rgba(255,255,255,0.4);
   line-height: 2;        
 }
+.valid,
+.inValid {
+  font-family: sans-serif;
+  font-size: .7rem;
+}
+/* .valid {
+  color: green;
+}
+.inValid {
+  color: red;
+} */
 
 /***********************************************
             Social Media Icons
@@ -803,11 +832,11 @@ input {
   height: 45px;
   margin: .5rem;
   text-decoration: none;
+  -webkit-transition: all 300ms ease-in;
   transition: all 300ms ease-in;
   z-index: 79;
 }
 .social a:hover {
-  -webkit-box-shadow: inset 35px 35px 0px white;
   box-shadow: inset 35px 35px 0px white;
 }
 .twitter {
@@ -849,59 +878,25 @@ input {
 ***********************************************/
 @-webkit-keyframes scroll {
   0% {
-    transform: translateX(-40%);
+    -webkit-transform: translateX(-40%);
+            transform: translateX(-40%);
   }
   100% {
-    transform: translateX(0%);
-  }
-}
-@-moz-keyframes scroll {
-  0% {
-    transform: translateX(-40%);
-  }
-  100% {
-    transform: translateX(0%);
-  }
-}
-@-o-keyframes scroll {
-  0% {
-    transform: translateX(-40%);
-  }
-  100% {
-    transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
   }
 }
 @keyframes scroll {
   0% {
-    transform: translateX(-10%);
+    -webkit-transform: translateX(-10%);
+            transform: translateX(-10%);
   }
   100% {
-    transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
   }
 }
 @-webkit-keyframes opaque {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: .1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-moz-keyframes opaque {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: .1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-o-keyframes opaque {
   0% {
     opacity: 0;
   }
@@ -924,52 +919,6 @@ input {
   }
 }
 @-webkit-keyframes shift {
-  0% {
-    background: url('../img/distortion.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  10% {
-    background: url('../img/selfie.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-  
-  30% {
-    
-    background: url('../img/distortion.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  
-  40% {
-    background: url('../img/selfie.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-    100% {
-  }
-}
-@-moz-keyframes shift {
-  0% {
-    background: url('../img/distortion.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  10% {
-    background: url('../img/selfie.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-  
-  30% {
-    
-    background: url('../img/distortion.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  
-  40% {
-    background: url('../img/selfie.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-    100% {
-  }
-}
-@-o-keyframes shift {
   0% {
     background: url('../img/distortion.jpg')no-repeat 50%;
     background-size: cover;
@@ -1031,15 +980,32 @@ input {
             Media Queries
 ***********************************************/
 
-@media screen and (min-width: 491px) {
+@media screen and (max-width: 515px) {
 
-  .mobile-logo {
-    padding-top: 1rem;
+  .about-background {
+    display: none;
   }
+  .intro {
+    margin: 0 auto;
+    width: 100%;
+    display: block;
+  }
+}
+
+@media screen and (min-width: 535px) {
+
+    .mobile-logo {
+    padding-top: 1rem;
+  }  
 
 }
 @media screen and ( min-width: 768px ) {
-
+  .headline {
+    width: 60%;
+  }
+  .headline-text {
+    font-size: 3rem;
+  }
   .logo-background {
     display: inline-block;
   }
@@ -1068,23 +1034,21 @@ input {
     margin: 0 auto;
     background-color: #111;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#444), to(#222));
+    background-image: -webkit-linear-gradient(#444, #222);
     background-image: linear-gradient(#444, #222);
     border-radius: 6px;
-    -webkit-box-shadow: inset 0 1px 1px #777;
-            box-shadow: inset 0 1px 1px #777;
+    box-shadow: inset 0 1px 1px #777;
     visibility: visible;        
   }
   .navItem {
     border-right: 1px solid #222;
-    -webkit-box-shadow: none;
-            box-shadow: none;
+    box-shadow: none;
     width: 100%;
   }
   .navItem:hover {
     border-right: none;
 /*    border-top: 2px solid #222;*/
-    -webkit-box-shadow: inset -1px 3px 0 black, inset 1px 0 2px black;
-            box-shadow: inset -1px 3px 0 black, inset 1px 0 2px black;
+    box-shadow: inset -1px 3px 0 black, inset 1px 0 2px black;
 /*    box-shadow: 0 20px 50px -1px white;*/
     position: relative;
 /*    top: 2px;*/
@@ -1093,8 +1057,7 @@ input {
   }
   .sticky-nav {
     position: fixed;
-    -webkit-box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.5);
-            box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.5);
     top: 0;
 }
   .navLogo {
@@ -1129,7 +1092,7 @@ input {
   .music-info  {
     font-size: 1.3rem;
     background: dimgrey;
-    margin: 5% auto;
+    margin: 0 auto;
     padding: 1rem;
     width: 80%;
 }
