made stylist changes to headline banners

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ header {
 
 
 body {
-  background-color: grey;
+  background-color: #939090;
+  color: #D4D2D2; 
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -114,25 +115,32 @@ footer {
   margin: 0 auto;
 	width: 100%;
   text-align: center;
-  font-family: 'hacked', sans-serif;
+  font-family: 'orbitron', sans-serif;
+  text-shadow: 2px 2px 0 black;
   z-index: 82;
 }
-h1, h3{
-
-  font-family: 'hacked', sans-serif;
-	text-align: center;
-  color: #999
+footer h3 {
+  color: #999;
+  font-family: 'orbitron', sans-serif;
+  font-size: 1.2rem;
+  margin-bottom: 0;
+  padding: 1% 0;
 }
+
 .top-shadow {
   box-shadow: 0 -10px 10px -10px black;
 }
 .headline {
   background: #5e5e5e;
+  border: 2px solid #4B4949;
+  border-bottom-color: transparent;
   box-shadow: inset 0 -5px 19px -9px rgba(0, 0, 0, 0.3);
   margin: 0 auto;
-  transform: translateY(90%);
+  -webkit-transform: translateY(90%);
+          transform: translateY(90%);
     /* -webkit-transform: translateX(-100%) scale(0.25); */
     -webkit-transition: all .5s;
+  -webkit-transition: all .9s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   transition: all .9s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   width: 80%;
   opacity: 0;
@@ -140,28 +148,25 @@ h1, h3{
   z-index: 78;
 }
 .headline-text {
-  background-color: azure;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    color: dimgray;
+  background: linear-gradient(to bottom, whitesmoke, transparent), url('../img/gradient-dark-stripe-hz.png') center repeat-x;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'orbitron', sans-serif;
   font-size: 2.1rem;
   margin: 0;
   padding: .5rem;
-  text-shadow: 0 0 8px rgba(255,255,255, .5), rgba(255,255,255,.7) 0px 3px 3px; 
+  text-shadow: 2px 4px 0 rgba(0,0,0,0.1);
 }
 .headline-show{
   opacity: 1;
-  transform: translateY(0%);
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
 }
-.border {
-  border: 10px solid transparent;
-    border-image: url(../img/menu-border.svg) 45 0 0 0;
-      -o-border-image: url(../img/menu-border.svg) 45 0 0 0;
-    border-image-repeat: repeat; 
-    margin: 0 auto;
-  position: relative;  
-  width: 100%;   
+h1, h3 {
+  font-family: 'hacked', sans-serif;
+	text-align: center;
+  color: #999
 }
 h2 {
   font-family: 'Orbitron', sans-serif;
@@ -170,6 +175,9 @@ h2 {
   padding: 1rem;
   text-align: center;
 }
+h3 {
+  
+}
  a:visited, a:link, a:active
 {
   color: inherit;
@@ -177,9 +185,10 @@ h2 {
 }
 .full {
   margin: 0 auto;
-
 }
-
+.greydient {
+  background-image: linear-gradient(to bottom, #7D7979, #4B4949); 
+}
 /***********************************************
             Mobile Navigation Menu
 ***********************************************/
@@ -269,16 +278,13 @@ h2 {
   color: #999;
   padding: 2px;
   text-align: center;
-  
 }
-
 .navItem:hover {
   -webkit-transition: 700ms;
   transition: 700ms;
   box-shadow: inset 1px 3px 1px black, inset -1px 0 1px black;
   background-color: azure;
     -webkit-background-clip: text;
-    -moz-background-clip: text;
     background-clip: text;
     color: #424242;
   text-shadow: 0 0 10px white, rgba(255,255,255,0.5) 0px 3px 3px; 
@@ -448,7 +454,7 @@ a.logo,
   width: 100%;
 }
 .intro {
-  color: whitesmoke;
+  color: #D4D2D2;
   position:relative;
   margin: 0 0 0 50%;
   padding: 10px;
@@ -483,7 +489,6 @@ a.logo,
 }
 .site-one-info,
 .site-two-info  {
-	background: dimgrey;
   margin: 0 auto;
   width: 90%;
 }
@@ -499,6 +504,7 @@ a.logo,
   max-width: 90px;
   z-index: 99;
 }
+
 .photo-flex {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -512,6 +518,8 @@ a.logo,
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-bottom: 20px;
+  width: 95%;        
 }
 .photoBox {
   width: 100%; max-width: 900px;
@@ -528,6 +536,7 @@ a.logo,
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 20px;        
 }
 .photoFrame {
   background-repeat: no-repeat;
@@ -564,7 +573,7 @@ a.logo,
   height: 40px;
 }
 .selector-circle {
-  background: #666;
+  background: #646161;
   box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
   cursor: pointer; 
   display: inline-block;
@@ -597,7 +606,6 @@ a.logo,
 .music-info {
   font-family: 'Homenaje', sans-serif;
   font-size: 1.3rem;
-  background: dimgrey;
 }
 .track {
   text-align: center;
@@ -653,7 +661,6 @@ iframe {
   
 }
 .modal-overlay {
-  background: dimgray;
   position: fixed;
   opacity: 0;
   bottom: -1000px;
@@ -715,7 +722,8 @@ label {
       -ms-flex-direction: row;
           flex-direction: row;
   -ms-flex-pack: distribute;
-      justify-content: space-between;
+      -webkit-box-pack: justify;
+          justify-content: space-between;
   margin-bottom: 10px;    
 }
 .label-text {
@@ -794,6 +802,7 @@ textarea::-moz-placeholder {
 }
 .submit-button:hover {
   border: 3px solid rgba(0, 150, 250, .6);
+  -webkit-transition: all 500ms;
   transition: all 500ms;
 }
 .submit-button:disabled {
@@ -811,7 +820,8 @@ input {
 }
 .inComplete {
   border: 2px solid rgba(200,6,6,.5);
-  animation: pulse 1s alternate-reverse infinite;
+  -webkit-animation: pulse 1s alternate-reverse infinite;
+          animation: pulse 1s alternate-reverse infinite;
 }
 
 
@@ -1002,9 +1012,6 @@ input {
     margin-top: 20px;
   }
 }
-
-
-
 @media screen and (max-width: 515px) {
 
   .about-background {
@@ -1016,13 +1023,11 @@ input {
     display: block;
   }
 }
-
 @media screen and (min-width: 535px) {
 
     .mobile-logo {
     padding-top: 1rem;
   }  
-
 }
 @media screen and ( min-width: 767px ) {
   .header-overflow {
@@ -1071,6 +1076,7 @@ input {
   .navItem {
     border-right: 1px solid #222;
     box-shadow: none;
+    padding-top: 5px;
     width: 100%;
   }
   .navItem:hover {
@@ -1089,7 +1095,7 @@ input {
     top: 0;
 }
   .navLogo {
-    background: dimgrey;
+    background: dimgray;
     display: inline-block;
     width: 100%;
     overflow: hidden;
@@ -1099,6 +1105,7 @@ input {
     text-align: center;
     opacity: 1;
     padding: 0;
+    padding-top: 5px;
 }
   .sticky-nav .navLogo {
     max-width: 150px;
@@ -1119,7 +1126,6 @@ input {
 }
   .music-info  {
     font-size: 1.3rem;
-    background: dimgrey;
     margin: 0 auto;
     padding: 1rem;
     width: 80%;
@@ -1174,8 +1180,4 @@ input {
   }
   
 }
-@media screen and ( min-width: 1042px )  {
 
-  
-
-}
